# confopt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  0.29.24  MANIFEST.in  QUANTILE_ESTIMATION_DOC_TEMPLATE.md  README.md  ensembling.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_lasso_changes.py
.cursor/rules/: conda-environment.mdc  python-best-practice-instructions.mdc  software-engineering-best-practices.mdc  system-permissions.mdc
.github/: copilot-instructions.md  documentation-instructions.md  testing-instructions.md
.github/workflows/: ci-cd.yml
acho/: config.py  estimation.py  optimization.py  preprocessing.py  quantile_wrappers.py  tuning.py  utils.py
confopt/: __init__.py  acquisition.py  adaptation.py  config.py  conformalization.py  data_classes.py  ensembling.py  estimation.py  optimization.py  preprocessing.py  quantile_wrappers.py  ranges.py  sampling.py  tracking.py  tuning.py  utils.py  wrapping.py
confopt/selection/: acquisition.py  adaptation.py  conformalization.py  cy_entropy.pyx  ensembling.py  estimation.py  estimator_configuration.py  quantile_estimators.py  sampling.py
confopt/selection/estimators/: ensembling.py  quantile_estimation.py
confopt/selection/sampling/: __init__.py  bound_samplers.py  cy_entropy.c  cy_entropy.pyx  entropy_samplers.py  expected_improvement_samplers.py  thompson_samplers.py  utils.py
confopt/utils/: encoding.py  optimization.py  preprocessing.py  tracking.py
confopt/utils/configurations/: encoded_data.py  encoding.py  sampling.py  scaling.py  utils.py
docs/: Makefile  README.md  advanced_usage.rst  api_reference.rst  architecture.rst  basic_usage.rst  build_docs.bat  components.rst  conf.py  contact.rst  getting_started.rst  index.rst  installation.rst  installation_setup.rst  make.bat  requirements.txt  roadmap.rst
docs/_static/: .gitkeep  custom.css  layout-manager.js
docs/_templates/: .gitkeep
docs/basic_usage/: classification_example.rst  regression_example.rst
docs/components/: acquisition.rst  adaptation.rst  conformalization.rst  ensembling.rst  quantile_estimation.rst  samplers.rst  tuning.rst
docs/developer/: architecture.rst  components.rst
docs/developer/components/: acquisition.rst  adaptation.rst  bound_samplers.rst  conformalization.rst  ensembling.rst  entropy_samplers.rst  estimation.rst  expected_improvement_samplers.rst  index.rst  quantile_estimation.rst  sampling_utils.rst  thompson_samplers.rst  tuning.rst
examples/: tabular_tuning.py
tests/: conftest.py  legacy_tests.py  test_acquisition.py  test_adaptation.py  test_conformalization.py  test_estimation.py  test_optimization.py  test_preprocessing.py  test_quantile_estimation.py  test_quantile_wrappers.py  test_sampling.py  test_tuning.py  test_utils.py
tests/integration_tests/: tuning_integration.py
tests/selection/: test_acquisition.py  test_adaptation.py  test_conformalization.py  test_ensembling.py  test_estimation.py  test_sampling.py
tests/selection/estimators/: test_ensembling.py  test_quantile_estimation.py
tests/selection/sampling/: test_bound_samplers.py  test_entropy_samplers.py  test_expected_improvement_samplers.py  test_sampling_utils.py  test_thompson_samplers.py
tests/utils/: test_cy_entropy.py  test_encoding.py  test_optimization.py  test_preprocessing.py  test_tracking.py  test_utils.py
tests/utils/configurations/: test_encoding.py  test_sampling_configurations.py
