[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confopt"
version = "2.0.1"
description = "Conformal hyperparameter optimization tool"
readme = "README.md"
authors = [
    {name = "Riccardo Doyle", email = "r.doyle.edu@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
    "pydantic>=2.0.0",
    "statsmodels>=0.13.0"
]

[project.urls]
Source = "https://github.com/rick12000/confopt"
Documentation = "https://confopt.readthedocs.io"
Changelog = "https://github.com/rick12000/confopt/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-xdist>=3.0.0",
    "pre-commit>=3.4.0",
    "autoflake>=2.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinxcontrib-mermaid>=0.8.0",
    "sphinx-autobuild>=2024.10.3"
]

[tool.setuptools]
packages = { find = { where = ["."] , include = ["confopt*"] } }
include-package-data = true
